FireAlarmApplication.Web/mtg_debug_20260127_143524.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 14:35:24
NetCDF: C:\Users\kubil\AppData\Local\Temp\e3dea009-b4c1-456b-b8c3-efa332ab822b.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
